Increase opacity for visibility, ensure only logged players may host multiplayer games

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,7 +21,7 @@
 
 body {
   background-image: url('/docs/paris-background.jpg');
-  
+
   
 }
 
@@ -137,7 +137,7 @@ body {
   border-radius: 25px;
   background-color: #ffffff;
   border: 1px solid black;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 #main-page-title{
